# tradegpt-bot

./: README.md  pyproject.toml
src/: go-get-RSI.py  main.py
src/data/: AAPL_Summary.txt  AXON_Summary.txt  CRWD_Summary.txt  GOOG_Summary.txt  META_Summary.txt  NVDA_Summary.txt  TSLA_Summary.txt
trade_bot/:  TSLA_stock_data.csv
