[tool.poetry]
name = "trade-bot"
version = "0.1.0"
description = "A trading bot for stock analysis"
authors = ["Seojun Lee <seojun.lee0419@gmail.com>"]
readme = "README.md"

[tool.poetry.virtualenvs]
in-project = true

packages = [
    { include = "trade_bot" }
]

[tool.poetry.dependencies]
python = ">=3.10"
yfinance = ">=0.2.52,<0.3.0"
openai = ">=1.59.8,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
